<resources>
    <string name="app_name">ExperimentTwo</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="description">中大图标</string>
    <string name="forUsername">用户名:</string>
    <string name="forPassword">密码:</string>
    <string name="hintForUsername">请输入姓名</string>
    <string name="hintForPassword">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="organization">社团</string>
    <string name="manager">管理者</string>
    <string name="signup">登录</string>
    <string name="signin">注册</string>
</resources>
